댓글 기능 구현, ScheduleRepository JPA 연결에 따른 Service 변경