@@ -1,49 +1,45 @@
 package com.sparta.calendar.service;
 
-import com.sparta.calendar.dto.*;
+import com.sparta.calendar.dto.ScheduleRequestDto;
+import com.sparta.calendar.dto.ScheduleResponseDto;
 import com.sparta.calendar.entity.Schedule;
 import com.sparta.calendar.repository.ScheduleRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
 public class ScheduleService {
 
-    private final ScheduleRepository schedules = new ScheduleRepository();
+    private final ScheduleRepository scheduleRepository;
 
 
     public ScheduleResponseDto createSchedule(ScheduleRequestDto request) {
         Schedule schedule = new Schedule(request);
-
-        long maxId = schedules.getSchedules().size() > 0 ? Collections.max(schedules.getSchedules().keySet()) + 1 : 1;
-        schedule.setId(maxId);
-
-        schedules.getSchedules().put(maxId, schedule);
-
-        ScheduleResponseDto responseDto = new ScheduleResponseDto(schedule);
-        return responseDto;
+        Schedule savedSchedule = scheduleRepository.save(schedule);
+        return new ScheduleResponseDto(savedSchedule);
     }
 
     public Schedule getSchedule(Long id) {
-        if (schedules.getSchedules().containsKey(id)) {
-            Schedule schedule = schedules.getSchedules().get(id);
-
-            return schedules.getSchedules().get(schedule.getId());
+        Optional<Schedule> scheduleOptional = scheduleRepository.findById(id);
+        if (scheduleOptional.isPresent()) {
+            return scheduleOptional.get();
         } else {
             throw new IllegalArgumentException("Schedule not found");
         }
     }
 
     public Schedule updateSchedule(Long id, ScheduleRequestDto request) {
-        if (schedules.getSchedules().containsKey(id)) {
-            Schedule schedule = schedules.getSchedules().get(id);
+        Optional<Schedule> scheduleOptional = scheduleRepository.findById(id);
+        if (scheduleOptional.isPresent()) {
+            Schedule schedule = scheduleOptional.get();
             if (schedule.getPassword().equals(request.getPassword())) {
                 schedule.update(request);
-                return schedule;
+                return scheduleRepository.save(schedule);
             } else {
                 throw new IllegalArgumentException("Passwords do not match");
             }
@@ -53,10 +49,11 @@ public class ScheduleService {
     }
 
     public Long deleteSchedule(Long id, ScheduleRequestDto request) {
-        if (schedules.getSchedules().containsKey(id)) {
-            Schedule schedule = schedules.getSchedules().get(id);
+        Optional<Schedule> scheduleOptional = scheduleRepository.findById(id);
+        if (scheduleOptional.isPresent()) {
+            Schedule schedule = scheduleOptional.get();
             if (schedule.getPassword().equals(request.getPassword())) {
-                schedules.getSchedules().remove(id);
+                scheduleRepository.delete(schedule);
                 return id;
             } else {
                 throw new IllegalArgumentException("Passwords do not match");
@@ -64,17 +61,10 @@ public class ScheduleService {
         } else {
             throw new IllegalArgumentException("Schedule not found");
         }
-
-    }
-
-    public List<ScheduleResponseDto> getSchedules(Long id) {
-        List<ScheduleResponseDto> scheduleList = schedules.getSchedules().values().stream().map(ScheduleResponseDto::new).toList();
-        return scheduleList;
     }
 
     public List<ScheduleResponseDto> getSchedules() {
-        List<ScheduleResponseDto> scheduleList = schedules.getSchedules().values().stream().map(ScheduleResponseDto::new).toList();
-
-        return scheduleList;
+        List<Schedule> schedules = scheduleRepository.findAll();
+        return schedules.stream().map(ScheduleResponseDto::new).collect(Collectors.toList());
     }
 }
